--- a/pl/calendar/chrome/calendar/calendar-event-dialog.properties
+++ b/pl/calendar/chrome/calendar/calendar-event-dialog.properties
@@ -37,26 +37,25 @@
 #
 # ***** END LICENSE BLOCK *****
 
-# LOCALIZATION NOTE (repeatDetailsRuleDaily3):
+# LOCALIZATION NOTE (dailyEveryNth):
 # Edit recurrence window -> Recurrence pattern -> Daily repeat rules
 # #1 - number
 # e.g. "every 4 days"
-repeatDetailsRuleDaily3=co %1$S dni
 dailyEveryNth=codziennie;co #1 dni;co #1 dni
-repeatDetailsRuleDaily4=w dni powszednie
+repeatDetailsRuleDaily4=w dni robocze
 
 # LOCALIZATION NOTE (weeklyNthOn):
 # Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
 # %1$S - weekday (one or more)
 # #2 - week interval
 # e.g. "every 3 weeks on Tuesday, Wednesday and Thursday
-weeklyNthOn=w: %1$S;co #2 dzień tygodnia w: %1$S;co #2 dzień tygodnia w: %1$S
+weeklyNthOn=w %1$S;co #2 tygodnie w %1$S;co #2 tygodni w %1$S
 
 # LOCALIZATION NOTE (weeklyEveryNth):
 # Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
 # #1 - interval
 # e.g. "every 5 weeks"
-weeklyEveryNth=co tydzień;co #1 tygodni;co #1 tygodni
+weeklyEveryNth=co tydzień;co #1 tygodnie;co #1 tygodni
 
 # LOCALIZATION NOTE (repeatDetailsAnd):
 # Used to show a number of weekdays in a list
@@ -70,37 +69,35 @@ repeatDetailsAnd=i
 # %2$S - weekday
 # #3 - interval
 # i.e. "the FIRST MONDAY of every 3 months"
-monthlyNthOfEvery=%1$S %2$S każdego miesiąca;%1$S %2$S co #3 miesiące;%1$S %2$S co #3 miesięcy
+monthlyNthOfEvery=w %1$S %2$S miesiąca;%1$S %2$S co #3 miesiące;%1$S %2$S co #3 miesięcy
 
 # LOCALIZATION NOTE (monthlyEveryOfEvery):
-
 # Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
-
 # %1$S - weekday
 # #2 - interval
 # i.e. "every MONDAY of every 3 months" 
 #  more specific: every monday of January, April, July, October
-monthlyEveryOfEvery=w: %1$S ;w: %1$S co #2 miesiące;w: %1$S co #2 miesięcy
+monthlyEveryOfEvery=w %1$S ;w %1$S co #2 miesiące;w %1$S co #2 miesięcy
 
 # LOCALIZATION NOTE (monthlyDayOfNth):
 # Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
 # #2 - month interval
 # e.g. "day 3 of every 2 months"
-monthlyDayOfNth=każdego %1$S dnia miesiąca;każdego %1$S dnia co #2 miesiąca;każdego %1$S dnia co #2 miesięcy
+monthlyDayOfNth=w %1$S. dzień miesiąca;w %1$S. dzień miesiąca co #2 miesiące;w %1$S. dzień miesiąca co #2 miesięcy
 
 # LOCALIZATION NOTE (monthlyLastDayOfNth):
 # Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
 # %1$S - day of month
 # #2 - month interval
 # e.g. "the last day of every 3 months"
-monthlyLastDayOfNth=ostatniego dnia miesiąca;ostatniego dnia miesiąca co #1 miesiące;ostatniego dnia miesiąca co #1 miesięcy
+monthlyLastDayOfNth=w ostatni dzień miesiąca;w ostatni dzień miesiąca co #1 miesiące;w ostatni dzień miesiąca co #1 miesięcy
 
 repeatDetailsOrdinal1=1.
 repeatDetailsOrdinal2=2.
 repeatDetailsOrdinal3=3.
 repeatDetailsOrdinal4=4.
 repeatDetailsOrdinal5=5.
-repeatDetailsOrdinal-1=ostatni(a)
+repeatDetailsOrdinal-1=ostatni(ą)
 
 # LOCALIZATION NOTE (yearlyNthOn):
 # Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
@@ -108,7 +105,7 @@ repeatDetailsOrdinal-1=ostatni(a)
 # %2$S - day of month
 # #3 - yearly interval
 # e.g. "every 3 years on December 14"
-yearlyNthOn=co %1$S %2$S;co #3 lata %1$S %2$S;co #3 lata %1$S %2$S
+yearlyNthOn=%2$S %1$S;%2$S %1$S raz na #3 lata;%2$S %1$S raz na #3 lat
 
 # LOCALIZATION NOTE (yearlyNthOnNthOf):
 # Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
@@ -118,16 +115,16 @@ yearlyNthOn=co %1$S %2$S;co #3 lata %1$S %2$S;co #3 lata %1$S %2$S
 # #4 - number
 # e.g. "the second Monday of every March"
 # e.g  "every 3 years the second Monday of March"
-yearlyNthOnNthOf=co %1$S %2$S każdego %3$S;co #4 lata %1$S %2$S %3$S;co #4 lat %1$S %2$S %3$S
+yearlyNthOnNthOf=w %1$S %2$S %3$S;w %1$S %2$S %3$S raz na #4 lata;w %1$S %2$S %3$S raz na #4 lat
 
 # LOCALIZATION NOTE (yearlyNthOfNth):
 # Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
 # %1$S - weekday
 # %2$S - month
-# #4 - number
+# #3 - number
 # e.g. "every Thursday of March"
 # e.g  "every 3 years on every Thursday of March"
-yearlyEveryNthOfNth=w każdy %1$S %2$S;co #4 lata %1$S %2$S;co #4 lat %1$S %2$S
+yearlyEveryNthOfNth=w każdy(-ą) %1$S %2$S;w każdy(-ą) %1$S %2$S co #3 lata;w każdy(-ą) %1$S %2$S co #3 lat
 
 # LOCALIZATION NOTE (repeatCount):
 # Edit recurrence window -> Recurrence details link on Event/Task dialog window
@@ -238,8 +235,7 @@ summaryDueTaskLabel=Termin:
 # Attach File Dialog
 selectAFile=Proszę wybrać plik(i) do załączenia
 removeCalendarsTitle=Usuń załączniki
-# FIXME (hubert: plural forms required)
-removeCalendarsText=Czy na pewno usunąć załączniki (%1$S elementów)?
+removeCalendarsText=Czy na pewno usunąć załączniki (liczba elementów: %1$S)?
 
 # LOCALIZATION NOTE: You can change the order of below params
 # Edit recurrence window -> Recurrence pattern -> Repeat monthly
