--- a/nl/calendar/chrome/calendar/calendar-event-dialog.properties
+++ b/nl/calendar/chrome/calendar/calendar-event-dialog.properties
@@ -37,90 +37,61 @@
 #
 # ***** END LICENSE BLOCK *****
 
-repeatDetailsRuleDaily1=elke dag
-repeatDetailsRuleDaily2=om de twee dagen
 # LOCALIZATION NOTE (repeatDetailsRuleDaily3):
 # Edit recurrence window -> Recurrence pattern -> Daily repeat rules
-# %1$S - number
+# #1 - number
 # e.g. "every 4 days"
-repeatDetailsRuleDaily3=elke %1$S dagen
+dailyEveryNth=elke dag;om de #1 dagen
 repeatDetailsRuleDaily4=elke weekdag
 
-# LOCALIZATION NOTE (repeatDetailsRuleWeekly1):
+# LOCALIZATION NOTE (weeklyNthOn):
 # Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
 # %1$S - weekday (one or more)
-# e.g. "every Sunday and Monday"
-repeatDetailsRuleWeekly1=elke %1$S
-# LOCALIZATION NOTE (repeatDetailsRuleWeekly2):
-# Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
-# %1$S - weekday (one or more)
-# e.g. "every other week on Sunday, Monday and Friday"
-repeatDetailsRuleWeekly2=om de twee weken op %1$S
-# LOCALIZATION NOTE (repeatDetailsRuleWeekly3):
-# Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
-# %1$S - number
-# %2$S - weekday (one or more)
-# e.g. "every 3 weeks on Friday"
-repeatDetailsRuleWeekly3=elke %1$S weken op %2$S
-repeatDetailsRuleWeekly4=elke week
-repeatDetailsRuleWeekly5=om de twee weken
-# LOCALIZATION NOTE (repeatDetailsRuleWeekly6):
-# Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
-# %1$S - number
-# e.g. "every 2 weeks"
-repeatDetailsRuleWeekly6=elke %1$S weken
+# #2 - week interval
+# e.g. "every 3 weeks on Tuesday, Wednesday and Thursday
+weeklyNthOn=elke %1$S;om de #2 weken op %1$S
 
-repeatDetailsDay1=zondag
-repeatDetailsDay2=maandag
-repeatDetailsDay3=dinsdag
-repeatDetailsDay4=woensdag
-repeatDetailsDay5=donderdag
-repeatDetailsDay6=vrijdag
-repeatDetailsDay7=zaterdag
+# LOCALIZATION NOTE (weeklyEveryNth):
+# Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
+# #1 - interval
+# e.g. "every 5 weeks"
+weeklyEveryNth=elke week;om de #1 weken
+
+# LOCALIZATION NOTE (repeatDetailsAnd):
+# Used to show a number of weekdays in a list
+# i.e. "Sunday, Monday, Tuesday " + and + " Wednesday"
+# XXX Please file a bug if this makes it hard to localize the list.
 repeatDetailsAnd=en
 
-# LOCALIZATION NOTE (repeatDetailsRuleMonthly):
+# LOCALIZATION NOTE (monthlyNthOfEvery):
 # Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
 # %1$S - ordinal
 # %2$S - weekday
-# e.g. "the first monday of every month"
-repeatDetailsRuleMonthly=de %1$S %2$S van elke maand
-# LOCALIZATION NOTE (repeatDetailsRuleMonthly2):
+# #3 - interval
+# i.e. "the FIRST MONDAY of every 3 months"
+monthlyNthOfEvery=de %1$S %2$S van elke maand;om de #3 maanden op de %1$S %2$S
+
+# LOCALIZATION NOTE (monthlyEveryOfEvery):
 # Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
-# %1$S - ordinal
-# %2$S - weekday
-# e.g. "the first monday of every other month"
-repeatDetailsRuleMonthly2=de %1$S %2$S om de twee maanden
-# LOCALIZATION NOTE (repeatDetailsRuleMonthly3):
-# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
-# %1$S - ordinal
-# %2$S - weekday
-# %3$S - number
-# e.g. "the first monday of every 3 month"
-repeatDetailsRuleMonthly3=de %1$S %2$S van elke %3$S maand
-# LOCALIZATION NOTE (repeatDetailsRuleMonthly4):
+# %1$S - weekday
+# #2 - interval
+# i.e. "every MONDAY of every 3 months" 
+#  more specific: every monday of January, April, July, October
+monthlyEveryOfEvery=elke %1$S van elke maand;om de #2 maanden op elke %1$S
+
+# LOCALIZATION NOTE (monthlyDayOfNth):
 # Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
 # %1$S - day of month
-# e.g. "day 3 of every month"
-repeatDetailsRuleMonthly4=op dag %1$S van elke maand
-# LOCALIZATION NOTE (repeatDetailsRuleMonthly5):
+# #2 - month interval
+# e.g. "day 3 of every 2 months"
+monthlyDayOfNth=dag %1$S van de maand;om de #2 maanden op dag %1$S
+
+# LOCALIZATION NOTE (monthlyLastDayOfNth):
 # Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
 # %1$S - day of month
-# e.g. "day 3 of every other month"
-repeatDetailsRuleMonthly5=op dag %1$S om de twee maanden
-# LOCALIZATION NOTE (repeatDetailsRuleMonthly6):
-# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
-# %1$S - day of month
-# %2$S - number
-# e.g. "day 3 of every 4 month"
-repeatDetailsRuleMonthly6=op dag %1$S van elke %2$S maand
-repeatDetailsRuleMonthly7=de laatste dag van de maand
-repeatDetailsRuleMonthly8=de laatste dag om de twee maanden
-# LOCALIZATION NOTE (repeatDetailsRuleMonthly9):
-# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
-# %1$S - number
-# e.g. "the last day of every 4 month"
-repeatDetailsRuleMonthly9=de laatste dag van elke %1$S maand
+# #2 - month interval
+# e.g. "the last day of every 3 months"
+monthlyLastDayOfNth=de laatste dag van de maand;om de #1 maanden op de laatste dag
 
 repeatDetailsOrdinal1=eerste
 repeatDetailsOrdinal2=tweede
@@ -129,82 +100,61 @@ repeatDetailsOrdinal4=vierde
 repeatDetailsOrdinal5=vijfde
 repeatDetailsOrdinal-1=laatste
 
-# LOCALIZATION NOTE (repeatDetailsRuleYearly1):
+# LOCALIZATION NOTE (yearlyNthOn):
 # Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
 # %1$S - month
 # %2$S - day of month
-# e.g. "every December 14"
-repeatDetailsRuleYearly1=elke %1$S %2$S
-# LOCALIZATION NOTE (repeatDetailsRuleYearly2):
-# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
-# %1$S - month
-# %2$S - day of month
-# e.g. "every other year on December 14"
-repeatDetailsRuleYearly2=elke twee jaar op %1$S %2$S
-# LOCALIZATION NOTE (repeatDetailsRuleYearly3):
-# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
-# %1$S - month
-# %2$S - day of month
-# %3$S - number
+# #3 - yearly interval
 # e.g. "every 3 years on December 14"
-repeatDetailsRuleYearly3=elke %3$S jaar op %1$S %2$S
-# LOCALIZATION NOTE (repeatDetailsRuleYearly4):
-# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
-# %1$S - ordinal
-# %2$S - weekday
-# %3$S - month
-# e.g "the second Monday of March"
-repeatDetailsRuleYearly4=de %1$S %2$S van %3$S
-# LOCALIZATION NOTE (repeatDetailsRuleYearly5):
-# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
-# %1$S - ordinal
-# %2$S - weekday
-# %3$S - month
-# e.g "every other year the second Monday of March"
-repeatDetailsRuleYearly5=elke twee jaar op de %1$S %2$S van %3$S
-# LOCALIZATION NOTE (repeatDetailsRuleYearly6):
-# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
-# %1$S - ordinal
-# %2$S - weekday
-# %3$S - month
-# %4$S - number
-# e.g "every 3 years the second Monday of March"
-repeatDetailsRuleYearly6=elke %4$S jaar op de %1$S %2$S van %3$S
+yearlyNthOn=elke %1$S %2$S;elke #3 jaar op %2$S %1$S
 
-repeatDetailsMonth1=januari
-repeatDetailsMonth2=februari
-repeatDetailsMonth3=maart
-repeatDetailsMonth4=april
-repeatDetailsMonth5=mei
-repeatDetailsMonth6=juni
-repeatDetailsMonth7=juli
-repeatDetailsMonth8=augustus
-repeatDetailsMonth9=september
-repeatDetailsMonth10=oktober
-repeatDetailsMonth11=november
-repeatDetailsMonth12=december
+# LOCALIZATION NOTE (yearlyNthOnNthOf):
+# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
+# %1$S - ordinal
+# %2$S - weekday
+# %3$S - month
+# #4 - number
+# e.g. "the second Monday of every March"
+# e.g  "every 3 years the second Monday of March"
+yearlyNthOnNthOf=de %1$S %2$S van elke %3$S;elke #4 jaar op de %1$S %2$S van %3$S
 
-# LOCALIZATION NOTE (repeatDetailsCount):
+# LOCALIZATION NOTE (yearlyNthOfNth):
+# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
+# %1$S - weekday
+# %2$S - month
+# #4 - number
+# e.g. "every Thursday of March"
+# e.g  "every 3 years on every Thursday of March"
+yearlyEveryNthOfNth=elke %1$S van %2$S;elke 3 jaar op elke %1$S van %2$S
+
+# LOCALIZATION NOTE (repeatCount):
 # Edit recurrence window -> Recurrence details link on Event/Task dialog window
 # %1%$ - repeatDetailsRule...(see above). This is the first line of the link
 # %2%$ - event start date (e.g. mm/gg/yyyy)
-# %3$S - event occurence times: number
-# %4$S - event start time (e.g. hh:mm (PM/AM))
-# %5$S - event end time (e.g. hh:mm (PM/AM))
+# %3$S - event start time (e.g. hh:mm (PM/AM))
+# %4$S - event end time (e.g. hh:mm (PM/AM))
+# #5 - event occurence times: number
 # e.g. with repeatDetailsRuleMonthly3:
+# "Occurs the first Sunday of every 3 month
+#  only on 1/1/2009"
+#  from 5:00 PM to 6:00 PM"
 # "Occurs the first Sunday of every 3 month
 #  effective 1/1/2009 for 5 times
 #  from 5:00 PM to 6:00 PM"
-repeatDetailsCount=Vindt %1$S plaats\nvanaf %2$S, %3$S keer\nvan %4$S tot %5$S.
-# LOCALIZATION NOTE (repeatDetailsCountAllDay):
+repeatCount=Vindt %1$S plaats\nvanaf %2$S, #5 keer\nvan %3$S tot %4$S.;Vindt %1$S plaats\nvanaf %2$S, #5 keer\nvan %3$S tot %4$S.
+
+# LOCALIZATION NOTE (repeatCountAllDay):
 # Edit recurrence window -> Recurrence details link on Event/Task dialog window
 # %1%$ - repeatDetailsRule...(see above). This is the first line of the link
 # %2%$ - event start date (e.g. mm/gg/yyyy)
-# %3$S - event occurence times: number
+# #3 - event occurence times: number
 # e.g. with repeatDetailsRuleMonthly3:
 # "Occurs the first Sunday of every 3 month
+#  only on 1/1/2009"
+# "Occurs the first Sunday of every 3 month
 #  effective 1/1/2009 for 5 times"
-repeatDetailsCountAllDay=Vindt %1$S plaats\nvanaf %2$S, %3$S keer.
+repeatCountAllDay=Vindt %1$S plaats\nvanaf %2$S, #3 keer.;Vindt %1$S plaats\nvanaf %2$S, #3 keer.
+
 # LOCALIZATION NOTE (repeatDetailsUntil):
 # Edit recurrence window -> Recurrence details link on Event/Task dialog window
 # %1%$ - repeatDetailsRule...(see above). This is the first line of the link
@@ -245,6 +195,11 @@ repeatDetailsInfinite=Vindt %1$S plaats\nvanaf %2$S\nvan %3$S tot %4$S.
 # "Occurs day 3 of every 5 month
 #  effective 1/1/2009"
 repeatDetailsInfiniteAllDay=Vindt %1$S plaats\nvanaf %2$S.
+
+# LOCALIZATION NOTE (ruleTooComplex):
+# This string is shown in the reminder details area if our code can't handle the
+# complexity of the recurrence rule yet.
+ruleTooComplex=Klik hier voor details
 
 # LOCALIZATION NOTE (reminderCustomTitle):
 # Edit reminder window -> Reminder details link on Event/Task dialog window
@@ -296,10 +251,10 @@ removeCalendarsText=Wilt u echt %1$S bijlagen verwijderen?
 monthlyOrder=%1$S %2$S
 
 # Edit recurrence window -> Recurrence pattern -> Repeat yearly
-# %1$S - day of month, %3$S - of, %2$S - month
+# %1$S - day of month, %2$S - of, %3$S - month
 # e.g. "6 [of] September"
-# If you don't need %3$S in your locale - please put this on the third place.
-yearlyOrder=%1$S %2$S %3$S
+# If you don't need %2$S in your locale - please put this on the third place.
+yearlyOrder=%1$S %3$S %2$S
 
 # Edit recurrence window -> Recurrence pattern -> Repeat yearly
 # %1$S - ordinal, %2$S - weekday, %3$S  - of, %4$S - month
