--- a/nl/calendar/updater/updater.ini
+++ b/nl/calendar/updater/updater.ini
@@ -1,4 +1,4 @@
 ; This file is in the UTF-8 encoding
 [Strings]
 Title=Software-update
-Info=Sunbird installeert de updates en zal over enkele ogenblikken starten...
+InfoText=%MOZ_APP_DISPLAYNAME% installeert de updates en zal over enkele ogenblikken starten…
