--- a/ro/mail/chrome/messenger/messenger.properties
+++ b/ro/mail/chrome/messenger/messenger.properties
@@ -85,7 +85,8 @@ compactingFolder=Se compactează dosarul %S...
 doneCompacting=Compactarea s-a încheiat
 autoCompactAllFoldersTitle=Compactare dosare
 autoCompactAllFolders=Doriți să compactați toate dosarele locale și cele pentru lucrul deconectat pentru a câștiga spațiu liber pe disc?
-autoCompactAllFoldersCheckbox=Fă asta automat de acum înainte.
+autoCompactAlwaysAskCheckbox=Întreabă-mă întotdeauna înainte de a compacta dosarele automat
+compactNowButton=Compactează &acum
 
 confirmFolderDeletionForFilter=Prin ștergerea dosarului „%S” se vor dezactiva filtrele asociate cu acesta. Sigur doriți să ștergeți dosarul?
 alertFilterChanged=Filtrele asociate cu acest dosar vor fi actualizate.
@@ -120,10 +121,10 @@ messageCollapsed=Pliat
 
 # Used in the SMTP Account Settings panel when a server value has no properties
 smtpServerList-NotSpecified=<nespecificat>
-smtpServer-SecureConnection-Type_0=Nu
-smtpServer-SecureConnection-Type_1=STARTTLS, dacă e disponibil
-smtpServer-SecureConnection-Type_2=STARTTLS
-smtpServer-SecureConnection-Type_3=SMTP-peste-SSL
+smtpServer-ConnectionSecurityType-0=Niciuna
+smtpServer-ConnectionSecurityType-1=STARTTLS, dacă e disponibil
+smtpServer-ConnectionSecurityType-2=STARTTLS
+smtpServer-ConnectionSecurityType-3=SSL/TLS
 smtpServer-SecureAuthentication-Type-false=Nu
 smtpServer-SecureAuthentication-Type-true=Da
 smtpServers-confirmServerDeletionTitle=Ștergere server
@@ -169,6 +170,8 @@ draftsFolderName=Mesaje nefinalizate
 templatesFolderName=Șabloane
 outboxFolderName=De trimis
 junkFolderName=Spam
+archivesFolderName=Arhive
+
 
 # Error message for special folder deletion on imap accounts
 # LOCALIZATION NOTE (specialFolderDeletionErr): Do not translate "IMAP" in the line below
@@ -354,6 +357,7 @@ confirmViewDeleteTitle=Confirmare
 confirmViewDeleteMessage=Sigur doriți să ștergeți această perspectivă?
 
 # for virtual folders
+confirmSavedSearchTitle=Confirmare ștergere
 confirmSavedSearchDeleteMessage=Sigur doriți să ștergeți această căutare salvată?
 
 ## @name ENTER_PASSWORD_PROMPT
