--- a/ro/mail/installer/custom.properties
+++ b/ro/mail/installer/custom.properties
@@ -75,7 +75,7 @@ WARN_MANUALLY_CLOSE_APP_UNINSTALL=$BrandShortName trebuie să fie închis pentru
 WARN_MANUALLY_CLOSE_APP_LAUNCH=$BrandShortName rulează deja.\n\nVă rugăm să închideţi $BrandShortName înainte de a lansa versiunea pe care tocmai aţi instalat-o.
 WARN_WRITE_ACCESS=Nu aveţi drepturi de scriere în directorul de instalare.\n\nApăsaţi „OK” pentru a alege un alt director.
 WARN_DISK_SPACE=Nu aveţi spaţiu suficient pe disc pentru a instala în această locaţie.\n\nApăsaţi „OK” pentru a alege o altă locaţie.
-WARN_MIN_SUPPORTED_OS_MSG=Sorry, $BrandShortName can't be installed. This version of $BrandShortName requires ${MinSupportedVer} or newer.
+WARN_MIN_SUPPORTED_OS_MSG=Ne pare rău, $BrandShortName nu poate fi instalat. Această versiune de $BrandShortName necesită ${MinSupportedVer} sau mai nou.
 WARN_RESTART_REQUIRED_UNINSTALL=Calculatorul dumneavoastră trebuie repornit pentru a încheia o dezinstalare anterioară de $BrandShortName. Doriţi să reporniţi acum?
 WARN_RESTART_REQUIRED_UPGRADE=Calculatorul dumneavoastră trebuie repornit pentru a încheia o actualizare mai veche de $BrandShortName. Doriţi să reporniţi calculatorul acum?
 ERROR_CREATE_DIRECTORY_PREFIX=Eroarea la crearea directorului:
